# python3_utils_tdinoto

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/python3_utils_tdinoto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils_tdinoto/: numeric.py  utils_bids_dcm_dataset.py  utils_dict.py  utils_io.py  utils_lists.py  utils_nifti_dicom.py  utils_numpy.py  utils_plots.py  utils_strings.py
