[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python3_utils_tdinoto"
version = "1.0.3"
description = "Useful wrapper functions for the most common python data types, and for nifti/dicom arrays."
readme = "README.md"
authors = [{ name = "Tommaso Di Noto", email = "tommydino@hotmail.it" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["utils", "wrappers"]
dependencies = [
    "nibabel",
    "SimpleITK",
    "python-dateutil",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/tommydino93/python3_utils_tdinoto"
